[package]
name = "ssh-util"
version = "0.1.0"
edition = "2024"

[features]
default = []
libssh2 = ["dep:libssh2"]
openssh = ["dep:tokio"]
russh = ["dep:russh"]

[dependencies]
async-ssh2-lite = { version = "0.50", optional = true }
futures = "0.3"
russh = { version = "0.45", optional = true }
thiserror = "2"
tokio = { version = "1", optional = true, features = ["process"] }
tracing = "0.1"
