[package]
name = "ssh-util"
version = "0.1.0"
edition = "2024"

[features]
default = ["libssh2", "openssh", "russh"]
libssh2 = ["dep:async-ssh2-lite"]
openssh = ["dep:tokio"]
russh = ["dep:russh"]

[dependencies]
async-ssh2-lite = { version = "0.5", optional = true }
bon = "3.7.1"
camino = "1.1.11"
futures = "0.3"
russh = { version = "0.45", optional = true }
secrecy = "0.10.3"
thiserror = "2"
tokio = { version = "1", optional = true, features = ["process"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
