[package]
name = "ssh-util"
version = "0.1.0"
edition = "2024"

[features]
default = ["libssh2", "openssh", "russh"]
libssh2 = ["dep:async-ssh2-lite"]
openssh = []
russh = ["dep:russh"]

[dependencies]
async-ssh2-lite = { version = "0.5", optional = true }
bon = "3"
camino = "1"
futures = "0.3"
russh = { version = "0.54", optional = true }
secrecy = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["process", "net"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
